--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="25dp"
-        android:scrollbars="none"
-        android:layout_marginEnd="25dp">
+        android:layout_marginEnd="25dp"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,52 +26,51 @@
                 android:text="@string/greeting"
                 android:textSize="36sp" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
-                android:orientation="horizontal">
+                android:text="Name"
+                android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="85dp"
-                    android:layout_height="wrap_content"
-                    android:text="Name: "
-                    android:textSize="25sp" />
-
-                <EditText
-                    android:id="@+id/name"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="25dp"
-                    android:autofillHints="name"
-                    android:hint="@string/Name"
-                    android:inputType="text"
-                    android:textSize="20sp" />
-            </LinearLayout>
-
-            <LinearLayout
+            <EditText
+                android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:layout_marginTop="5dp"
+                android:autofillHints="name"
+                android:background="@drawable/et_style"
+                android:fontFamily="@font/inter_regular"
+                android:hint="@string/Name"
+                android:inputType="text"
+                android:padding="10dp"
+                android:textSize="18sp" />
 
-                <TextView
-                    android:layout_width="85dp"
-                    android:layout_height="wrap_content"
-                    android:text="PRN: "
-                    android:textSize="25sp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:text="PRN"
+                android:textSize="18sp" />
 
-                <EditText
-                    android:id="@+id/prn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginEnd="25dp"
-                    android:autofillHints="phone"
-                    android:hint="@string/PRN"
-                    android:inputType="number"
-                    android:textSize="20sp" />
-            </LinearLayout>
+            <EditText
+                android:id="@+id/prn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:autofillHints="phone"
+                android:background="@drawable/et_style"
+                android:fontFamily="@font/inter_regular"
+                android:hint="@string/PRN"
+                android:inputType="number"
+                android:padding="10dp"
+                android:textSize="18sp" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:layout_marginVertical="35dp"
+                android:background="@color/black" />
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -80,7 +79,6 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:orientation="vertical">
 
