--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,14 +81,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <Button
-                android:id="@+id/m11"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="170dp"
-                android:layout_alignParentStart="true"
-                android:gravity="bottom"
-                android:paddingBottom="15dp"
-                android:text="@string/a1" />
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/m11"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentStart="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a1" />
+
+                <Button
+                    android:id="@+id/m12"
+                    android:layout_width="170dp"
+                    android:layout_height="170dp"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="bottom"
+                    android:paddingBottom="15dp"
+                    android:text="@string/a2" />
+            </RelativeLayout>
         </RelativeLayout>
 
         <TextView
