--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,29 @@
             android:layout_marginTop="50dp"
             android:layout_marginBottom="25dp"
             android:fontFamily="@font/inter_semibold"
+            android:text="@string/m29"
+            android:textSize="28sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Button
+                android:id="@+id/m291"
+                android:layout_width="match_parent"
+                android:layout_height="170dp"
+                android:layout_alignParentStart="true"
+                android:gravity="bottom"
+                android:paddingBottom="15dp"
+                android:text="@string/a1" />
+        </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="25dp"
+            android:fontFamily="@font/inter_semibold"
             android:text="@string/m23"
             android:textSize="28sp" />
 
