--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:autofillHints="name"
-            android:background="@drawable/et_style"
+            android:background="@drawable/style_edit_text_bg"
             android:fontFamily="@font/inter_regular"
             android:hint="@string/Name"
             android:inputType="text"
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:autofillHints="phone"
-            android:background="@drawable/et_style"
+            android:background="@drawable/style_edit_text_bg"
             android:fontFamily="@font/inter_regular"
             android:hint="@string/PRN"
             android:inputType="number"
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginTop="35dp"
-            android:background="@drawable/line_style" />
+            android:background="@drawable/style_line" />
 
         <TextView
             android:layout_width="wrap_content"
